lib/src/compiler/tests/testdata/errors/150.out
error[E029]: invalid escape sequence
 --> line:3:19
  |
3 |     $a = "/الدفاع+\s[هة]وزار/"
  |                   ^^ invalid escape sequence `\s`